# dotfiles

./: .gitignore  lazy-lock.json
IdeaVim/: .ideavimrc
after/plugin/: lsp.lua  treesitter.lua
clang-format/: .clang-format
git/: .gitconfig  .gitconfig-default  .gitignore  cliff.toml  config  default.gitconfig  gitignore
install-scripts/: LICENSE  README.md  install-devpod.sh
kitty/: kitty.conf
lua/my_config/: remap.lua
nvim/: init.lua  lazy-lock.json  lazyvim.json  package.json
nvim/after/ftplugin/: lua.lua  python.lua  sql.lua  systemverilog.lua
nvim/after/plugin/: copilot.lua  easymotion.lua  harpoon.lua  hologram.lua  jupynium.lua  lsp.lua  nerdtree.lua  oil.lua  spider.lua  sql_ls.lua  telescope.lua  treesitter.lua  trouble.lua  ufo.lua  zen_mode.lua
nvim/ftdetect/: sh.lua  systemverilog.lua
nvim/lua/cfg/: autocmd.lua  fn.lua  init.lua  packer.lua  remap.lua  set.lua
nvim/lua/cmd/: init.lua
nvim/lua/config/: autocmds.lua  fterm.lua  funcs.lua  init.lua  keymaps.lua  lazy.lua  lsp.lua  options.lua
nvim/lua/funcs/: clipboard.lua  fterm.lua  init.lua
nvim/lua/lspconfig/: lua_ls.lua
nvim/lua/my_config/: init.lua  packer.lua  remap.lua  set.lua
nvim/lua/plugins/: ale.lua  all.lua  blink.cmp.lua  blink.lua  colorscheme.lua  conform.lua  conform_formatter.lua  dadbod.lua  disabled.lua  fd.lua  formatter.lua  fugitive.lua  harpoon.lua  hologram.lua  init.lua  jupynium.lua  jupytext.lua  lazydev.lua  lspconfig.lua  lspzero.lua  luasnip.lua  mason.lua  nerdtree.lua  nvim_soil.lua  oil.lua  plantuml_syntax.lua  promise.lua  spider.lua  telescope.lua  textual_tcss.lua  treesitter.lua  trouble.lua  ufo.lua  vim_sneak.lua  vim_tmux_navigator.lua  zen_mode.lua
nvim/lua/plugins/lib/: lazydev.lua  mason.lua  treesitter.lua
nvim/lua/plugins/lsp/: blink.cmp.lua  dadbod.lua  formatter.lua  keymaps.lua  lspconfig.lua  textual_tcss.lua
nvim/lua/plugins/lsp/providers/: basedpyright.lua  lua_ls.lua  python.lua  systemverilog.lua
nvim/lua/plugins/misc/: fugitive.lua  git_conflict.lua  jupynium.lua  jupytext.lua  nvim_soil.lua  plantuml_syntax.lua
nvim/lua/plugins/navigation/: harpoon.lua  oil.lua  vim_sneak.lua  vim_tmux_navigator.lua
nvim/lua/plugins/ui/: colorscheme.lua  noice.lua  snacks.lua  telescope.lua  undotree.lua  zen_mode.lua
nvim/lua/usercmd/: fterm.lua  init.lua
nvim/plugin/: packer_compiled.lua
nvim/snippets/: package.json  sv_snippets.code-snippets
nvim/snippets/python/: pydoc.json  python.json
nvim/snippets/systemverilog/: systemverilogdoc.json  systemveriloghdr.json  systemveriloguvm.json
nvim/spell/: en.utf-8.add.spl
outdated/IdeaVim/: .ideavimrc
outdated/PowerShell/: Microsoft.PowerShell_profile.ps1
scripts/: sshfs_mnt.sh
templates/c/: .clang-format  .doxygen-config  Makefile
templates/c/src/: main.c  main.cpp
templates/git/: .gitignore.template  README.md
templates/git/assets/: SubmittingPatches.html
templates/python/: pyproject.toml
templates/python/package/: .gitignore  bitbucket-pipelines.yaml  pyproject.toml  ruff.toml
templates/system-verilog/: .svls.toml  Bender.yml  veridian.yaml.template
templates/system-verilog/scripts/: vcs-argfile.sh
templates/systemverilog/bender-project/: .gitignore  veridian.yaml
templates/systemverilog/project/: .gitignore  .svlint.toml  Bender.yml  Makefile
templates/systemverilog/project/.dvt/: build.config.xml  dv_cmn.build
templates/systemverilog/project/ref/: Dockerfile
templates/systemverilog/project/ref/ndconfig/: PKG_Project.txt
templates/systemverilog/project/top/: clk_rst_if.sv  env_module.sv  top.sv
templates/systemverilog/sim-template/rtl/: pss_cmn_top.sv
templates/systemverilog/sim-template/sim/: README.md  pss_cmn.list  pss_cmn.run  pss_cmn_doa_regression.vsif  pss_cmn_sanity_test_list.vsif  pss_cmn_vcs.tcl  pss_cmn_vcs_gui.tcl  pss_cmn_xcl.tcl  sim_args.xcl  xrun-help.txt
templates/tcsh/: script.sh
templates/uml/: global_styles.puml  note_styles.puml  order.puml  simulation.puml  style_it.puml  styles.puml
tmux/: tmux.conf
tmux/1.8/: tmux.conf
vim/: .vimrc
vscode/: keybindings.json  settings.json
vscode-insiders/: keybindings.json  settings.json
vscode-insiders/snippets/: sv_snippets.code-snippets
vscode/snippets/: sv_snippets.code-snippets
zsh/: .zshrc  .zshrc.aliases  .zshrc.functions  .zshrc.modules  .zshrc.options  .zshrc.prompt  zshrc  zshrc.aliases  zshrc.functions  zshrc.keybinds  zshrc.options  zshrc.prompt
