# ------------------------------------------------------------------------------
# Build System Configurations
# ------------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ------------------------------------------------------------------------------
# Project Configurations
# ------------------------------------------------------------------------------

[project]
name = "package"
version = "0.1.0"
readme = "README.md"
license = "Apache 2.0"
authors = [{name = "Sagi Kimhi", email = "sagi.kim5@gmail.com"}]
maintainers = [{name = "Sagi Kimhi", email = "sagi.kim5@gmail.com"}]
description = ""
dependencies = []
license-files = ["LICENSE"]
requires-python = ">=3.12"

[project.scripts]

[project.gui-scripts]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pyupgrade",
    "pydocstyle",
    "pycodestyle",
    "flake8-bugbear",
    "flake8-simplify",
]

# ------------------------------------------------------------------------------
# Developer Configurations
# ------------------------------------------------------------------------------

[tool.mypy]
files = ["src"]
pretty = true
strict = true
color_output = true
show_error_codes = true
warn_unreachable = true
python_version = "3.12"

